	(set_local_socket): Do not assume uid fits in 'int'.

	* etags.c (xmalloc, xrealloc): Accept size_t, not unsigned int,
	to avoid potential buffer overflow issues on typical 64-bit hosts.
	(whatlen_max): New static var.
	(main): Avoid buffer overflow if subsidiary command length is
	greater than BUFSIZ or 2*BUFSIZ + 20. Do not use sprintf when its
	result might not fit in 'int'.

2011-07-28  Paul Eggert  <eggert@cs.ucla.edu>

	Assume freestanding C89 headers, string.h, stdlib.h.
	* ebrowse.c: Include stdlib.h unconditionally.
	* etags.c, update-game-score.c:
	Include string.h and stdlib.h unconditionally.
	* makefile.w32-in (LOCAL_CFLAGS): Don't define STDC_HEADERS.
	* movemail.c, pop.c: Include string.h unconditionally.
	* update-game-score.c: No need to include stdarg.h; not used.

	Assume support for memcmp, memcpy, memmove, memset.
	* etags.c (absolute_filename): Assume memmove exists.

2011-07-09  Andreas Schwab  <schwab@linux-m68k.org>

	* update-game-score.c (usage): Update usage line.

2011-07-02  Jason Rumney  <jasonr@gnu.org>

	* emacsclient.c (decode_options) [WINDOWSNT]: Avoid tty mode on
	Windows (Bug#5486).

2011-06-25  Glenn Morris  <rgm@gnu.org>

	* emacsclient.c (decode_options) <opt>: Add `F:'.
	(print_help_and_exit): Mention --frame-parameters.

2011-06-25  Andreas Rottmann  <a.rottmann@gmx.at>

	* emacsclient.c (longopts, decode_options, main): Add frame-parameters.

2011-06-10  Paul Eggert  <eggert@cs.ucla.edu>

	* movemail.c: Fix race condition and related bugs (Bug#8836).
	(main) [!MAIL_USE_SYSTEM_LOCK]: Prefer mkstemp to mktemp, as this
	fixes some race conditions.  Report mkstemp/mktemp errno rather
	than a possibly-garbage errno.  Reinitialize the template each
	time through the loop, as earlier mkstemp/mktemp calls could have
	trashed it.  Pass 0600 (not 0666) to mktemp, for consistency
	with mkstemp; the permissions don't matter anyway.

2011-06-01  Dan Nicolaescu  <dann@ics.uci.edu>
